--- a/src/scss/_tablet.scss
+++ b/src/scss/_tablet.scss
@@ -18,10 +18,6 @@ body {
   MAIN PAGE
 ------------------------------------------------------------------------------*/
 
-.gameContainer {
-  height: 50vh;
-}
-
 .player {
   width: 175px;
 }
